--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
+    "lightswind": "^3.1.12",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
